# quizdom

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  requirements.txt  user-manual.md
.cursor/rules/: backend.mdc  frontend.mdc  react-router-v7-spa-conventions.mdc
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  setup.sh
.github/workflows/: build.yml  ci.yml  lint.yml  security.yml  test.yml
app/core/: config.py
app/db/: session.py
backend/: .coveragerc  .env.example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 000_initial_initial_schema.py  000_initial_schema.py  001_implement_erm.py  002_add_game_session_tracking.py  002_difficulty_int.py  002_game_tracking.py  003_game_tracking.py  003_showTopics_markQuestions.py  004_quiz_status_idx.py  005_add_user_profile_fields.py  006_add_game_status_enum_values.py  007_add_ready_to_session_players.py  008_make_started_at_nullable.py  0c736aa11b72_add_user_profile_fields.py  1525509e25d2_add_user_topic_favorites.py  7c8255f6d397_add_user_topic_favorites_table.py  README.md  ab1164608d35_add_user_topic_favorites_table.py  ada817a8cedb_change_difficulty_column_to_integer.py  e215637efb6f_add_user_topic_favorites_table.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  dependencies.py  email.py  logging.py  metrics.py  security.py
backend/app/db/: helpers.py  models.py  seed.py  seed_quiz_data.py  session.py
backend/app/models/: user.py
backend/app/routers/: admin.py  admin_router.py  auth.py  auth_router.py  game.py  game_router.py  quiz.py  user.py  user_router.py  ws_router.py
backend/app/schemas/: auth.py  game.py  quiz_admin.py  user.py
backend/app/services/: __init__.py  auth.py  auth_service.py  game_service.py  quiz_admin_service.py  user_admin_service.py
backend/tests/: README.md  SUMMARY.md  conftest.py  factories.py  test_app.py  test_auth.py  test_auth_flow.py  test_lobby.py  test_models.py  test_security.py  test_user_management.py
backend/tests/e2e/: test_websocket.py
backend/tests/integration/: test_admin_quiz_router.py  test_admin_users_router.py  test_auth_endpoints.py  test_game_api.py
backend/tests/unit/: test_auth_service.py  test_game_service.py  test_quiz_admin_service.py  test_user_admin_service.py  test_user_schema.py
docs/: API_VERSIONING.md  IMAGE_UPLOAD_IMPLEMENTATION.md  MIGRATION_GUIDE.md  QUIZDOM_REVIEW.md  QUIZDOM_STATUS_AND_TASKS.md  USER_ADMINISTRATION_IMPLEMENTATION.md  branch-strategy.md  erm.md  game-implementation.md  test-organisation.md  test-protocol-template.md  test-protocols-consolidation
frontend/: .gitignore  9-slice-example.html  Dockerfile  README-TESTING.md  README.md  eslint.config.js  freddy-notes  package.json  playwright.config.ts  pnpm-lock.yaml  style.css  vite.config.ts  vitest.config.ts  vitest.setup.ts
tests/: test_app.py
(+199 files in other folders)
