[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quizdom-backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "sqlmodel",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "psycopg2-binary",
    "python-jose[cryptography]",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "bcrypt>=3.2.0,<4.0.0",
    "python-multipart",
    "email-validator",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx[http2]",
    "websockets",
    "factory-boy",
    "freezegun",
    "coverage",
    "pytest-cov",
    "ruff",
    "mypy",
    "faker"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
    "ignore:'crypt' is deprecated:DeprecationWarning",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pytest]
markers = [
    "unit: Unit tests",
    "integration: Integration tests with database",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/test*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 90
